# scx

./: .clang-format  .clangd  .codespellrc  .editorconfig  .gitignore  BREAKING_CHANGES.md  CAKEBENCH_HISTORY.md  CARGO_BUILD.md  CLAUDE.md  Cargo.toml  DEVELOPER_GUIDE.md  INSTALL.md  Makefile  OVERVIEW.md  README.md  RELEASE.md  UNIT_TESTING_GUIDE.md  cakebench  cargo-publish.py  code.txt  comm.json  dump.rdb  e2e-tests.toml  kernel-versions.json  kernel.config  meson.build  meson.options  norm.json  patch  pgo-lto.sh  rust-toolchain.toml  rustfmt.toml  scx.spec  scx_layered.md  sync-from-kernel.sh  timeslice.json  timeslice.pt  trace.csv  version-tool.py
lib/: DHQ_README.md  Makefile  arena.bpf.c  atq.bpf.c  bitmap.bpf.c  btree.bpf.c  cgroup_bw.bpf.c  cpumask.bpf.c  cpumask_bpf.bpf.c  dhq.bpf.c  dl.bpf.c  lat_cri.bpf.c  lvqueue.bpf.c  meson.build  minheap.bpf.c  pelt.bpf.c  pmu.bpf.c  ravg.bpf.c  rbtree.bpf.c  rpq.bpf.c  sdt_alloc.bpf.c  sdt_task.bpf.c  topology.bpf.c
lib/alloc/: asan.bpf.c  buddy.bpf.c  buddy_internal.h  bump.bpf.c  common.bpf.c  stack.bpf.c  static.bpf.c
lib/benchmarks/: bench_pq.bpf.c
lib/include/: lib
lib/include/lib/: sdt_task.h
lib/scxtest/: kern_types.h  meson.build  overrides.c  overrides.h  scx_test.c  scx_test.h  scx_test_cpumask.c  scx_test_cpumask.h  scx_test_map.c  scx_test_map.h
lib/selftests/: Makefile  selftest.bpf.c  selftest.c  selftest.h  st_arena_topology_timer.bpf.c  st_atq.bpf.c  st_bitmap.bpf.c  st_btree.bpf.c  st_dhq.bpf.c  st_lvqueue.bpf.c  st_minheap.bpf.c  st_rbtree.bpf.c  st_rpq.bpf.c  st_topology.bpf.c
lib/selftests/alloc/: Makefile  README.md  selftest.bpf.c  selftest.c  selftest.h  st_asan.bpf.c  st_buddy.bpf.c  st_bump.bpf.c  st_static.bpf.c
lib/selftests/compat/: Makefile  test_enum64_recovery.c
libalpm/openrc/: 90-scx-scheds-upgrade.hook  meson.build  scx-openrc-restart
libalpm/systemd/: 90-scx-scheds-upgrade.hook  meson.build  scx-systemd-restart
rust/: Cargo.toml  meson.build
rust/arenalib/: lib
rust/arenalib/arenalib/: Cargo.toml  build.rs
rust/arenalib/selftests/: Cargo.toml  README.md  build.rs
rust/scx_arena/scx_arena/: Cargo.toml  build.rs
rust/scx_arena/selftests/: Cargo.toml  build.rs
rust/scx_bpf_compat/: Cargo.toml  build.rs
rust/scx_bpf_compat/src/: bpf_skel.rs  lib.rs
rust/scx_bpf_unittests/: Cargo.toml  build.rs
rust/scx_bpf_unittests/src/: lib.rs
rust/scx_cargo/: Cargo.toml  bpf_h  build.rs  vmlinux.tar.zst
rust/scx_cargo/src/: bpf_builder.rs  clang_info.rs  lib.rs  pahole_info.rs
rust/scx_ebpf/: Cargo.toml
rust/scx_ebpf/src/: cgroup.rs  cpumask.rs  ctx.rs  global.rs  helpers.rs  kfuncs.rs  kptr.rs  lib.rs  maps.rs  ops.rs  pmu.rs  timer.rs  vmlinux.rs
rust/scx_ebpf_derive/: Cargo.toml
rust/scx_ebpf_derive/src/: lib.rs
rust/scx_events/: Cargo.toml  rustfmt.toml
rust/scx_events/benches/: bench.rs
rust/scx_events/src/: arena.rs  data.rs  events.rs  lib.rs  reactor.rs
rust/scx_lib_selftests/: Cargo.toml  build.rs
rust/scx_lib_selftests/src/: main.rs
rust/scx_loader/: Cargo.toml  README.md  configuration.md  org.scx.Loader.xml
rust/scx_loader/src/: config.rs  dbus.rs  lib.rs  logger.rs  main.rs
rust/scx_metrics/: Cargo.toml  build.rs
rust/scx_metrics/src/: collector.rs  lib.rs  main.rs
rust/scx_raw_pmu/: Cargo.toml
rust/scx_raw_pmu/src/: json.rs  lib.rs  resources.rs
rust/scx_rustland_core/: Cargo.toml  README.md  build.rs  meson.build
rust/scx_rustland_core/assets/: bpf.rs
rust/scx_rustland_core/src/: alloc.rs  bpf.rs  lib.rs  rustland_builder.rs
rust/scx_simulator/: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATION.md  build.rs  coverage.sh  validate.sh  workloads
rust/scx_simulator/.beads/: .gitignore
rust/scx_simulator/ai_docs/: DETERMINISM.md  HASHMAP_AUDIT.md  lavd_realism_analysis.md  realism_gap_analysis.md
rust/scx_simulator/benches/: simulator.rs
rust/scx_simulator/bug_finding/: README.md  stress.py  stress.sh
rust/scx_simulator/csrc/: scx_simple.bpf.c  sim_bpf_stubs.c  sim_cgroup.c  sim_sdt_stubs.c  sim_sigfpe.c  sim_task.c  sim_task.h  (+3 more)
rust/scx_stat/: Cargo.toml  meson.build
rust/scx_stats/: Cargo.toml  README.md  meson.build
rust/scx_userspace_arena/: Cargo.toml  build.rs
rust/scx_utils/: Cargo.toml  README.md  bindings.h  build.rs  meson.build  perf_wrapper.h  vmlinux.tar.zst
rust/scx_vmlinux/: Cargo.toml
scheds/: README.md  meson.build  sync-from-kernel.sh  sync-to-kernel.sh
scheds/c/: .gitignore  Makefile  README.md  meson.build  scx_bug.bpf.c  scx_bug.c  scx_central.bpf.c  scx_central.c  scx_cosmos.bpf.c  scx_cosmos.c  scx_cosmos.h  scx_drop.bpf.c  scx_drop.c  scx_empty.bpf.c  scx_empty.c  scx_flatcg.bpf.c  scx_flatcg.c  scx_joule.bpf.c  scx_joule.c  scx_nest.bpf.c  scx_nest.c  scx_pair.bpf.c  scx_pair.c  scx_prev.bpf.c  scx_prev.c  scx_qmap.bpf.c  scx_qmap.c  scx_rr.bpf.c  scx_rr.c  scx_sdt.bpf.c  scx_sdt.c  scx_sdt.h  scx_simple.bpf.c  scx_simple.c  scx_tiny.bpf.c  scx_tiny.c  scx_topo.bpf.c  scx_topo.c  scx_userland.bpf.c  scx_userland.c  (+2 more)
scheds/c-user/: README.md  meson.build  scx_nest.bpf.c  scx_nest.c
scheds/experimental/: README.md
scheds/include/: bpf_arena_spin_lock.h  bpf_atomic.h  lib  vmlinux.h
scheds/kernel-examples/: README.md  meson.build  scx_central.bpf.c  scx_central.c  scx_flatcg.bpf.c  scx_flatcg.c  scx_flatcg.h  scx_pair.bpf.c  scx_pair.c  scx_qmap.bpf.c  scx_qmap.c  scx_simple.bpf.c  scx_simple.c  scx_userland.bpf.c  scx_userland.c  scx_userland.h
scheds/rust/: .gitignore  Cargo.toml  README.md  meson.build
scheds/rust-user/: meson.build
services/: README.md  journald@sched-ext.conf  meson.build  sched-ext-central.service  sched-ext-qmap.service  sched-ext-rustland.service  sched-ext-rusty.service  scx  scx.service  scx_central.service  scx_flatcg.service  scx_loader.toml  scx_nest.service  scx_pair.service  scx_qmap.service  scx_rustland.service  scx_rusty.service  scx_simple.service  scx_userland.service
services/openrc/: meson.build  scx.initrd  scx.logrotate
services/systemd/: README.md  meson.build  org.scx.Loader.service  scx.service  scx_loader.service
(+1496 files in other folders)
