[workspace]
members = [
    "rust/scx_arena/scx_arena",
    "rust/scx_arena/selftests",
    "rust/scx_bpf_unittests",
    "rust/scx_cargo",
    "rust/scx_raw_pmu",
    "rust/scx_rustland_core",
    "rust/scx_stats",
    "rust/scx_stats/scx_stats_derive",
    "rust/scx_userspace_arena",
    "rust/scx_utils",
    "scheds/rust/scx_beerland",
    "scheds/rust/scx_bpfland",
    "scheds/rust/scx_chaos",
    "scheds/rust/scx_cosmos",
    "scheds/rust/scx_flash",
    "scheds/rust/scx_lavd",
    "scheds/rust/scx_layered",
    "scheds/rust/scx_mitosis",
    "scheds/rust/scx_p2dq",
    "scheds/rust/scx_rlfifo",
    "scheds/rust/scx_rustland",
    "scheds/rust/scx_rusty",
    "scheds/rust/scx_tickless",
    "scheds/rust/scx_wd40",
    "tools/scxcash",
    "tools/scxtop",
    "tools/vmlinux_docify",
    "tools/xtask",
]
resolver = "2"

[profile.release]
lto = "thin"

[profile.release-tiny]
inherits = "release"
lto = "thin"
strip = true
incremental = true
codegen-units = 1

[profile.release-fast]
inherits = "release"
lto = false
incremental = true
