[workspace]
members = [
    "rust/scx_arena/scx_arena",
    "rust/scx_arena/selftests",
    "rust/scx_bpf_unittests",
    "rust/scx_cargo",
    "rust/scx_raw_pmu",
    "rust/scx_rustland_core",
    "rust/scx_stats",
    "rust/scx_stats/scx_stats_derive",
    "rust/scx_userspace_arena",
    "rust/scx_utils",
    "scheds/rust/scx_beerland",
    "scheds/rust/scx_bpfland",
    "scheds/rust/scx_cake",
    "scheds/rust/scx_chaos",
    "scheds/rust/scx_cosmos",
    "scheds/rust/scx_flash",
    "scheds/rust/scx_lavd",
    "scheds/rust/scx_layered",
    "scheds/rust/scx_mitosis",
    "scheds/rust/scx_p2dq",
    "scheds/rust/scx_pandemonium",
    "scheds/rust/scx_rlfifo",
    "scheds/rust/scx_rustland",
    "scheds/rust/scx_rusty",
    "scheds/rust/scx_tickless",
    "scheds/rust/scx_wd40",
    "tools/scxcash",
    "tools/scxtop",
    "tools/vmlinux_docify",
    "tools/xtask",
]
resolver = "2"

[profile.release]
lto = "thin"

[profile.release-tiny]
inherits = "release"
opt-level = "z"
lto = false
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 32
panic = "abort"

[profile.ci]
inherits = "dev"
debug = 0
incremental = false
strip = true
lto = false

[workspace.dependencies]
anyhow = "1"
crossbeam = "0.8"
glob = "0.3"
lazy_static = "1"
libc = "0.2"
log = "0.4"
ordered-float = "5"
plain = "0.2"
regex = "1"
ruzstd = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
sscanf = "0.5"
static_assertions = "1"
tempfile = "3"
tracing = "0.1"
version-compare = "0.2"
walkdir = "2"
libbpf-cargo = "=0.26.1"
libbpf-rs = "=0.26.1"
