project('sched_ext schedulers', 'c')

error('Meson builds are deprecated and have been removed. Please switch to `cargo build` for Rust'
        + ' schedulers and `make` for C schedulers. Please report any issues packaging for distributions'
        + ' at https://github.com/sched-ext/scx/discussions/2731.')
