option('bpf_clang', type: 'string', value: 'clang',
       description: 'clang to use when compiling .bpf.c')
option('bpftool', type: 'string', value: 'bpftool',
       description: 'bpftool to use when generating .bpf.skel.h')
option('libbpf_a', type: 'string',
       description: 'Static libbpf.a to use')
option('libbpf_h', type: 'array',
       description: 'libbpf header directories, only meaning with libbpf_a option')
