option('bpf_clang', type: 'string', value: 'clang',
       description: 'clang to use when compiling .bpf.c')
option('bpftool', type: 'string', value: 'bpftool',
       description: 'bpftool to use when generating .bpf.skel.h')
option('libbpf_a', type: 'string',
       description: 'Static libbpf.a to use')
option('libbpf_h', type: 'array',
       description: 'libbpf header directories, only meaningful with libbpf_a option')
option('cargo', type: 'string', value: 'cargo',
       description: 'cargo to use when building rust sub-projects')
option('cargo_home', type: 'string',
       description: 'CARGO_HOME env to use when invoking cargo')
option('offline', type: 'boolean', value: 'false',
       description: 'Compilation step should not access the internet')
option('enable_rust', type: 'boolean', value: 'true',
       description: 'Enable rust sub-projects')
option('kernel', type: 'string', value: 'vmlinuz',
       description: 'kernel image used to test schedulers')
